@@ -3850,7 +3850,8 @@ process_program_headers (FILE * file)
 
 	  for (j = 1; j < elf_header.e_shnum; j++, section++)
 	    {
-	      if (ELF_IS_SECTION_IN_SEGMENT_MEMORY (section, segment))
+	      if (ELF_SECTION_SIZE (section, segment) != 0
+		  && ELF_SECTION_IN_SEGMENT (section, segment))
 		printf ("%s ", SECTION_NAME (section));
 	    }
 
