@@ -1,3 +1,13 @@
+2010-04-23  Alan Modra  <amodra@gmail.com>
+
+	* elf.c: Replace use of ELF_IS_SECTION_IN_SEGMENT and
+	ELF_IS_SECTION_IN_SEGMENT_FILE with ELF_SECTION_IN_SEGMENT
+	throughout file.
+	(assign_file_positions_for_load_sections): Modify section in
+	segment warning to ignore overlay vmas.
+	* elf32-spu.c (spu_elf_object_p): Replace use of
+	ELF_IS_SECTION_IN_SEGMENT_MEMORY with ELF_SECTION_IN_SEGMENT.
+
 2010-04-22  Nick Clifton  <nickc@redhat.com>
 
 	* po/bfd.pot: Updated by the Translation project.
